--- a/GNUmakefile.template
+++ b/GNUmakefile.template
@@ -122,10 +122,6 @@ ${BUILDTMP}/closure.o : src/closure.c $(ICONS)
 	@echo "Compiling:" src/closure.c
 	@$(CC) $(COPTS) -c src/closure.c -o $@
 
-${BUILDTMP}/icon-factory.o : src/icon-factory.c $(ICONS)
-	@echo "Compiling:" src/icon-factory.c
-	@$(CC) $(COPTS) -c src/icon-factory.c -o $@
-
 # Building the dvdisaster binary
 
 dvdisaster: $(ICONS) $(OFILES)
@@ -140,29 +136,6 @@ dvdisaster: $(ICONS) $(OFILES)
 	then echo "not touching locale"; \
 	else $(MAKE) --no-print-directory -C locale; \
 	fi
-
-# gdk-pixbuf-csource sometimes produces truncated output, so we have to ensure the output
-# is valid before appending it to inlined-icons.h:
-src/inlined-icons.h: icons/read.png icons/create.png icons/scan.png icons/fix.png icons/verify.png icons/strip.png icons/open-ecc.png icons/open-img.png icons/cd.png icons/gtk-help.png icons/gtk-index.png icons/gtk-preferences.png icons/gtk-quit.png icons/gtk-stop.png icons/tooltip.png icons/nothing.png
-	@echo "Building:" src/inlined-icons.h
-	@rm -f src/inlined-icons.h
-	@while gdk-pixbuf-csource --raw --name=dvdisaster_read            icons/read.png            >src/.icons.tmp; do grep -q '"};' src/.icons.tmp && break; done; cat src/.icons.tmp >>src/inlined-icons.h
-	@while gdk-pixbuf-csource --raw --name=dvdisaster_create          icons/create.png          >src/.icons.tmp; do grep -q '"};' src/.icons.tmp && break; done; cat src/.icons.tmp >>src/inlined-icons.h
-	@while gdk-pixbuf-csource --raw --name=dvdisaster_scan            icons/scan.png            >src/.icons.tmp; do grep -q '"};' src/.icons.tmp && break; done; cat src/.icons.tmp >>src/inlined-icons.h
-	@while gdk-pixbuf-csource --raw --name=dvdisaster_fix             icons/fix.png             >src/.icons.tmp; do grep -q '"};' src/.icons.tmp && break; done; cat src/.icons.tmp >>src/inlined-icons.h
-	@while gdk-pixbuf-csource --raw --name=dvdisaster_verify          icons/verify.png          >src/.icons.tmp; do grep -q '"};' src/.icons.tmp && break; done; cat src/.icons.tmp >>src/inlined-icons.h
-	@while gdk-pixbuf-csource --raw --name=dvdisaster_strip           icons/strip.png           >src/.icons.tmp; do grep -q '"};' src/.icons.tmp && break; done; cat src/.icons.tmp >>src/inlined-icons.h
-	@while gdk-pixbuf-csource --raw --name=dvdisaster_open_ecc        icons/open-ecc.png        >src/.icons.tmp; do grep -q '"};' src/.icons.tmp && break; done; cat src/.icons.tmp >>src/inlined-icons.h
-	@while gdk-pixbuf-csource --raw --name=dvdisaster_open_img        icons/open-img.png        >src/.icons.tmp; do grep -q '"};' src/.icons.tmp && break; done; cat src/.icons.tmp >>src/inlined-icons.h
-	@while gdk-pixbuf-csource --raw --name=dvdisaster_cd              icons/cd.png              >src/.icons.tmp; do grep -q '"};' src/.icons.tmp && break; done; cat src/.icons.tmp >>src/inlined-icons.h
-	@while gdk-pixbuf-csource --raw --name=dvdisaster_gtk_help        icons/gtk-help.png        >src/.icons.tmp; do grep -q '"};' src/.icons.tmp && break; done; cat src/.icons.tmp >>src/inlined-icons.h
-	@while gdk-pixbuf-csource --raw --name=dvdisaster_gtk_index       icons/gtk-index.png       >src/.icons.tmp; do grep -q '"};' src/.icons.tmp && break; done; cat src/.icons.tmp >>src/inlined-icons.h
-	@while gdk-pixbuf-csource --raw --name=dvdisaster_gtk_preferences icons/gtk-preferences.png >src/.icons.tmp; do grep -q '"};' src/.icons.tmp && break; done; cat src/.icons.tmp >>src/inlined-icons.h
-	@while gdk-pixbuf-csource --raw --name=dvdisaster_gtk_quit        icons/gtk-quit.png        >src/.icons.tmp; do grep -q '"};' src/.icons.tmp && break; done; cat src/.icons.tmp >>src/inlined-icons.h
-	@while gdk-pixbuf-csource --raw --name=dvdisaster_gtk_stop        icons/gtk-stop.png        >src/.icons.tmp; do grep -q '"};' src/.icons.tmp && break; done; cat src/.icons.tmp >>src/inlined-icons.h
-	@while gdk-pixbuf-csource --raw --name=dvdisaster_tooltip         icons/tooltip.png         >src/.icons.tmp; do grep -q '"};' src/.icons.tmp && break; done; cat src/.icons.tmp >>src/inlined-icons.h
-	@while gdk-pixbuf-csource --raw --name=dvdisaster_nothing         icons/nothing.png         >src/.icons.tmp; do grep -q '"};' src/.icons.tmp && break; done; cat src/.icons.tmp >>src/inlined-icons.h
-	@rm -f src/.icons.tmp
 
 $(BUILDTMP)/rs-encoder-sse2.o: src/rs-encoder-sse2.c
 	@echo "Compiling:" src/rs-encoder-sse2.c
@@ -358,7 +331,7 @@ distclean: clean
 clean:
 	@echo "Removing rebuildable files"
 	@rm -f *.o "$(BUILDTMP)"/*.o medium.* abbild.* dvdisaster .dvdisaster core core.* *.core
-	@rm -f src/inlined-icons.h src/help-dialogs.h
+	@rm -f src/help-dialogs.h
 	@find . -name \*\~ -print | xargs rm -f;
 	@find . -name \*.mo -print | xargs rm -f;
 	@find . -name \#\*\# -print | xargs rm -f;
